# crt-tv

./: .ansible-lint  .gitignore  LICENSE  Makefile  README.md  crt-tv  crt_tv_fs_observer.service  install.sh  pyproject.toml  resize_images.py
ansible/: inventory.yaml  playbook-deploy.yaml
ansible/roles/crt-tv/defaults/: main.yaml
ansible/roles/crt-tv/tasks/: main.yaml
ansible/roles/crt-tv/templates/: config.toml.jinja2  crt_tv_fs_observer.service.jinja2
ansible/roles/imagemagick/defaults/: main.yaml
ansible/roles/imagemagick/tasks/: main.yaml
ansible/roles/imagemagick/templates/: policy.xml.jinja2
ansible/roles/kodi-autoexec/defaults/: main.yaml
ansible/roles/kodi-autoexec/tasks/: main.yaml
ansible/roles/kodi-autoexec/templates/: autoexec.py.jinja2
ansible/roles/kodi-keymaps/defaults/: main.yaml
ansible/roles/kodi-keymaps/tasks/: main.yaml
ansible/roles/kodi-keymaps/templates/: keymaps.xml.jinja2  system_volume_control.py.jinja2
ansible/roles/rgbpi/tasks/: main.yaml
ansible/roles/rgbpi/templates/: kodi.sh.jinja2
ansible/roles/samba/defaults/: main.yaml
ansible/roles/samba/tasks/: main.yaml
ansible/roles/samba/templates/: smb.conf.jinja2
ansible/roles/uv/tasks/: main.yaml
ansible/templates/: crt_tv_fs_observer.service.jinja2  smb.conf.jinja2
ansible/templates/kodi-autoexec/: addon.xml.jinja2  autoexec.py.jinja2
crt_tv/: __main__.py  cli.py  config.py  fs_events.py  fs_observer.py  images.py  kodi.py  logging.py  resize.py  resize_images.py  timestamp.py  utils.py  video.py
